// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Personal Data Form Container should render Default 1`] = `
<DocumentFragment>
  <form
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <img
              alt="DSC07717"
              class="emotion-10 emotion-11"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
              srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <input
              accept="image/*"
              class="emotion-12"
              id=":r0:"
              type="file"
            />
          </div>
          <div
            class="emotion-13 emotion-14"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorError MuiIconButton-sizeMedium emotion-15"
              tabindex="0"
              title="Bild löschen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium emotion-17"
              tabindex="0"
              title="Neues Bild hochladen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="emotion-19 emotion-20"
      >
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1:"
            id=":r1:-label"
          >
            Vorname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="firstname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r1:"
              name="firstName"
              type="text"
              value="Kamil"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Vorname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r2:"
            id=":r2:-label"
          >
            Funktion / Beruf
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r2:"
              name="flair"
              type="text"
              value="Financial Advisor & CEO"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Funktion / Beruf
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r3:"
            id=":r3:-label"
          >
            Nachname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="lastname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r3:"
              name="name"
              type="text"
              value="Wasyl"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Nachname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="emotion-39 emotion-40"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-41"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r4:"
              id=":r4:-label"
            >
              Strasse und Hausnummer
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="address"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r4:"
                name="address.streetAddress"
                type="text"
                value="Cool Street"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Strasse und Hausnummer
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r5:"
              id=":r5:-label"
            >
              PLZ
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="zip"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r5:"
                name="address.zipCode"
                type="text"
                value="12345"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    PLZ
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r6:"
              id=":r6:-label"
            >
              Ort / Stadt
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="city"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r6:"
                name="address.city"
                type="text"
                value="Surfers Paradise"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Ort / Stadt
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-59"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r7:"
              id=":r7:-label"
            >
              Land
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="country"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r7:"
                name="address.country"
                type="text"
                value="Australia"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Land
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-65 emotion-66"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-67"
        >
          Nur ausfüllen, wenn Sie das Passwort ändern möchten. Ansonsten leer lassen.
        </p>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-69"
            data-shrink="false"
            for=":r8:"
            id=":r8:-label"
          >
            Passwort
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-70"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-71"
              id=":r8:"
              name="password"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-72"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-73"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-76"
              >
                <span>
                  Passwort
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-69"
            data-shrink="false"
            for=":r9:"
            id=":r9:-label"
          >
            Passwort wiederholen
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-70"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-71"
              id=":r9:"
              name="passwordRepeated"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-72"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-73"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-76"
              >
                <span>
                  Passwort wiederholen
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="emotion-86 emotion-87"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":ra:"
            id=":ra:-label"
          >
            Email (nicht bearbeitbar)
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled emotion-24"
              disabled=""
              id=":ra:"
              name="email"
              type="email"
              value="some-example@mail.com"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Email (nicht bearbeitbar)
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary emotion-94"
      tabindex="0"
      type="submit"
    >
      Save
      <span
        class="MuiTouchRipple-root emotion-16"
      />
    </button>
  </form>
</DocumentFragment>
`;

exports[`Personal Data Form Container should render DeleteImage 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -548,10 +548,156 @@
              </fieldset>
            </div>
          </div>
        </div>
      </div>
+     <div
+       class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-standardError MuiAlert-standard css-1iznk5b-MuiPaper-root-MuiAlert-root"
+       role="alert"
+     >
+       <div
+         class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+       >
+         <svg
+           aria-hidden="true"
+           class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+           data-testid="ErrorOutlineIcon"
+           focusable="false"
+           viewBox="0 0 24 24"
+         >
+           <path
+             d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+           />
+         </svg>
+       </div>
+       <div
+         class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+       >
+         No more mocked responses for the query: mutation UploadImage($uploadImageInput: UploadImageInput) {
+   uploadUserProfileImage(uploadImageInput: $uploadImageInput) {
+     ...FullUser
+     __typename
+   }
+ }
+
+ fragment FullUser on User {
+   id
+   name
+   firstName
+   flair
+   birthday
+   email
+   address {
+     ...FullAddress
+     __typename
+   }
+   paymentProviderCustomers {
+     ...FullPaymentProviderCustomer
+     __typename
+   }
+   oauth2Accounts {
+     ...FullOAuth2Account
+     __typename
+   }
+   image {
+     ...FullImage
+     __typename
+   }
+   properties {
+     ...FullProperty
+     __typename
+   }
+   __typename
+ }
+
+ fragment FullAddress on UserAddress {
+   company
+   streetAddress
+   streetAddress2
+   zipCode
+   city
+   country
+   __typename
+ }
+
+ fragment FullPaymentProviderCustomer on PaymentProviderCustomer {
+   paymentProviderID
+   customerID
+   __typename
+ }
+
+ fragment FullOAuth2Account on OAuth2Account {
+   type
+   provider
+   scope
+   __typename
+ }
+
+ fragment FullImage on Image {
+   id
+   createdAt
+   modifiedAt
+   filename
+   format
+   mimeType
+   extension
+   width
+   height
+   fileSize
+   title
+   description
+   tags
+   source
+   link
+   license
+   focalPoint {
+     x
+     y
+     __typename
+   }
+   ...ImageURLs
+   __typename
+ }
+
+ fragment ImageURLs on Image {
+   url
+   xl: transformURL(input: {width: 1200, output: PNG, quality: 0.8})
+   l: transformURL(input: {width: 1000, output: PNG, quality: 0.8})
+   m: transformURL(input: {width: 800, output: PNG, quality: 0.8})
+   s: transformURL(input: {width: 500, output: PNG, quality: 0.8})
+   xs: transformURL(input: {width: 300, output: PNG, quality: 0.8})
+   xxs: transformURL(input: {width: 200, output: PNG, quality: 0.8})
+   xlSquare: transformURL(
+     input: {width: 1200, height: 1200, output: PNG, quality: 0.8}
+   )
+   lSquare: transformURL(
+     input: {width: 1000, height: 1000, output: PNG, quality: 0.8}
+   )
+   mSquare: transformURL(
+     input: {width: 800, height: 800, output: PNG, quality: 0.8}
+   )
+   sSquare: transformURL(
+     input: {width: 500, height: 500, output: PNG, quality: 0.8}
+   )
+   xsSquare: transformURL(
+     input: {width: 300, height: 300, output: PNG, quality: 0.8}
+   )
+   xxsSquare: transformURL(
+     input: {width: 200, height: 200, output: PNG, quality: 0.8}
+   )
+   __typename
+ }
+
+ fragment FullProperty on PublicProperties {
+   key
+   value
+   __typename
+ }
+ Expected variables: {"uploadImageInput":null}
+
+       </div>
+     </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-13uldyx-MuiButtonBase-root-MuiButton-root-PersonalDataForm"
        tabindex="0"
        type="submit"
      >"
`;

exports[`Personal Data Form Container should render Filled 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -121,11 +121,11 @@
                autocomplete="firstname"
                class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":rn:"
                name="firstName"
                type="text"
-               value="Kamil"
+               value="KamilFoo"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
@@ -194,11 +194,11 @@
                autocomplete="lastname"
                class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                id=":rp:"
                name="name"
                type="text"
-               value="Wasyl"
+               value="WasylBar"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
@@ -234,11 +234,11 @@
                  autocomplete="address"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":rq:"
                  name="address.streetAddress"
                  type="text"
-                 value="Cool Street"
+                 value="Cool StreetMusterstrasse 1"
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
@@ -271,11 +271,11 @@
                  autocomplete="zip"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":rr:"
                  name="address.zipCode"
                  type="text"
-                 value="12345"
+                 value="123458047"
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
@@ -308,11 +308,11 @@
                  autocomplete="city"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":rs:"
                  name="address.city"
                  type="text"
-                 value="Surfers Paradise"
+                 value="Surfers ParadiseZürich"
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
@@ -345,11 +345,11 @@
                  autocomplete="country"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":rt:"
                  name="address.country"
                  type="text"
-                 value="Australia"
+                 value="AustraliaSchweiz"
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
@@ -375,12 +375,12 @@
          </p>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
          >
            <label
-             class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-gv8x57-MuiFormLabel-root-MuiInputLabel-root"
-             data-shrink="false"
+             class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1oxf4qp-MuiFormLabel-root-MuiInputLabel-root"
+             data-shrink="true"
              for=":ru:"
              id=":ru:-label"
            >
              Passwort
            </label>
@@ -392,11 +392,11 @@
                autocomplete="new-password"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                id=":ru:"
                name="password"
                type="password"
-               value=""
+               value="12345678"
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1om5its-MuiInputAdornment-root"
              >
                <button
@@ -429,11 +429,11 @@
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
-                 class="css-yjsfm1"
+                 class="css-14lo706"
                >
                  <span>
                    Passwort
                  </span>
                </legend>
@@ -442,12 +442,12 @@
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
          >
            <label
-             class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-gv8x57-MuiFormLabel-root-MuiInputLabel-root"
-             data-shrink="false"
+             class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1oxf4qp-MuiFormLabel-root-MuiInputLabel-root"
+             data-shrink="true"
              for=":rv:"
              id=":rv:-label"
            >
              Passwort wiederholen
            </label>
@@ -459,11 +459,11 @@
                autocomplete="new-password"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                id=":rv:"
                name="passwordRepeated"
                type="password"
-               value=""
+               value="12345678"
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1om5its-MuiInputAdornment-root"
              >
                <button
@@ -496,11 +496,11 @@
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
              >
                <legend
-                 class="css-yjsfm1"
+                 class="css-14lo706"
                >
                  <span>
                    Passwort wiederholen
                  </span>
                </legend>"
`;

exports[`Personal Data Form Container should render WithClassName 1`] = `
<DocumentFragment>
  <form
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <img
              alt="DSC07717"
              class="emotion-10 emotion-11"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
              srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <input
              accept="image/*"
              class="emotion-12"
              id=":r11:"
              type="file"
            />
          </div>
          <div
            class="emotion-13 emotion-14"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorError MuiIconButton-sizeMedium emotion-15"
              tabindex="0"
              title="Bild löschen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium emotion-17"
              tabindex="0"
              title="Neues Bild hochladen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="emotion-19 emotion-20"
      >
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r12:"
            id=":r12:-label"
          >
            Vorname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="firstname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r12:"
              name="firstName"
              type="text"
              value="Kamil"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Vorname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r13:"
            id=":r13:-label"
          >
            Funktion / Beruf
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r13:"
              name="flair"
              type="text"
              value="Financial Advisor & CEO"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Funktion / Beruf
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r14:"
            id=":r14:-label"
          >
            Nachname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="lastname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r14:"
              name="name"
              type="text"
              value="Wasyl"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Nachname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="emotion-39 emotion-40"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-41"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r15:"
              id=":r15:-label"
            >
              Strasse und Hausnummer
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="address"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r15:"
                name="address.streetAddress"
                type="text"
                value="Cool Street"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Strasse und Hausnummer
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r16:"
              id=":r16:-label"
            >
              PLZ
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="zip"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r16:"
                name="address.zipCode"
                type="text"
                value="12345"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    PLZ
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r17:"
              id=":r17:-label"
            >
              Ort / Stadt
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="city"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r17:"
                name="address.city"
                type="text"
                value="Surfers Paradise"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Ort / Stadt
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-59"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r18:"
              id=":r18:-label"
            >
              Land
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="country"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r18:"
                name="address.country"
                type="text"
                value="Australia"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Land
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-65 emotion-66"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-67"
        >
          Nur ausfüllen, wenn Sie das Passwort ändern möchten. Ansonsten leer lassen.
        </p>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-69"
            data-shrink="false"
            for=":r19:"
            id=":r19:-label"
          >
            Passwort
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-70"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-71"
              id=":r19:"
              name="password"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-72"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-73"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-76"
              >
                <span>
                  Passwort
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-69"
            data-shrink="false"
            for=":r1a:"
            id=":r1a:-label"
          >
            Passwort wiederholen
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-70"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-71"
              id=":r1a:"
              name="passwordRepeated"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-72"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-73"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-76"
              >
                <span>
                  Passwort wiederholen
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="emotion-86 emotion-87"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1b:"
            id=":r1b:-label"
          >
            Email (nicht bearbeitbar)
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled emotion-24"
              disabled=""
              id=":r1b:"
              name="email"
              type="email"
              value="some-example@mail.com"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Email (nicht bearbeitbar)
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary emotion-94"
      tabindex="0"
      type="submit"
    >
      Save
      <span
        class="MuiTouchRipple-root emotion-16"
      />
    </button>
  </form>
</DocumentFragment>
`;

exports[`Personal Data Form Container should render WithEmotion 1`] = `
<DocumentFragment>
  <form
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <img
              alt="DSC07717"
              class="emotion-10 emotion-11"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
              srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <input
              accept="image/*"
              class="emotion-12"
              id=":r1c:"
              type="file"
            />
          </div>
          <div
            class="emotion-13 emotion-14"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorError MuiIconButton-sizeMedium emotion-15"
              tabindex="0"
              title="Bild löschen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium emotion-17"
              tabindex="0"
              title="Neues Bild hochladen"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root emotion-16"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="emotion-19 emotion-20"
      >
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1d:"
            id=":r1d:-label"
          >
            Vorname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="firstname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r1d:"
              name="firstName"
              type="text"
              value="Kamil"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Vorname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1e:"
            id=":r1e:-label"
          >
            Funktion / Beruf
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r1e:"
              name="flair"
              type="text"
              value="Financial Advisor & CEO"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Funktion / Beruf
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root emotion-21"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1f:"
            id=":r1f:-label"
          >
            Nachname
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-23"
          >
            <input
              aria-invalid="false"
              autocomplete="lastname"
              class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
              id=":r1f:"
              name="name"
              type="text"
              value="Wasyl"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Nachname
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="emotion-39 emotion-40"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-41"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r1g:"
              id=":r1g:-label"
            >
              Strasse und Hausnummer
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="address"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r1g:"
                name="address.streetAddress"
                type="text"
                value="Cool Street"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Strasse und Hausnummer
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r1h:"
              id=":r1h:-label"
            >
              PLZ
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="zip"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r1h:"
                name="address.zipCode"
                type="text"
                value="12345"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    PLZ
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r1i:"
              id=":r1i:-label"
            >
              Ort / Stadt
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="city"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r1i:"
                name="address.city"
                type="text"
                value="Surfers Paradise"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Ort / Stadt
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-59"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
              data-shrink="true"
              for=":r1j:"
              id=":r1j:-label"
            >
              Land
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
            >
              <input
                aria-invalid="false"
                autocomplete="country"
                class="MuiInputBase-input MuiOutlinedInput-input emotion-24"
                id=":r1j:"
                name="address.country"
                type="text"
                value="Australia"
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline emotion-25"
              >
                <legend
                  class="emotion-26"
                >
                  <span>
                    Land
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-65 emotion-66"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-67"
        >
          Nur ausfüllen, wenn Sie das Passwort ändern möchten. Ansonsten leer lassen.
        </p>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-69"
            data-shrink="false"
            for=":r1k:"
            id=":r1k:-label"
          >
            Passwort
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-70"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-71"
              id=":r1k:"
              name="password"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-72"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-73"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-76"
              >
                <span>
                  Passwort
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-69"
            data-shrink="false"
            for=":r1l:"
            id=":r1l:-label"
          >
            Passwort wiederholen
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd emotion-70"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd emotion-71"
              id=":r1l:"
              name="passwordRepeated"
              type="password"
              value=""
            />
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-72"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-73"
                tabindex="0"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-16"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-76"
              >
                <span>
                  Passwort wiederholen
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="emotion-86 emotion-87"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-47"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
            data-shrink="true"
            for=":r1m:"
            id=":r1m:-label"
          >
            Email (nicht bearbeitbar)
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl emotion-43"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled emotion-24"
              disabled=""
              id=":r1m:"
              name="email"
              type="email"
              value="some-example@mail.com"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline emotion-25"
            >
              <legend
                class="emotion-26"
              >
                <span>
                  Email (nicht bearbeitbar)
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary emotion-94"
      tabindex="0"
      type="submit"
    >
      Save
      <span
        class="MuiTouchRipple-root emotion-16"
      />
    </button>
  </form>
</DocumentFragment>
`;
